--- a/Document Classification.ipynb
+++ b/Document Classification.ipynb
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "T_Data_Path = '/home/abdarhman/Documents/Knowledge Officer/train_articles.json'\n",
+    "T_Data_Path = 'train_articles.json'\n",
     "with  open(T_Data_Path) as File:\n",
     "    Raw_T_Data = json.load(File)\n",
     "    \n",
